# LLM4NetLab

./: .gitignore  README.md  pyproject.toml  setup.py
agent/: base.py  lang_graph_test.py  llm.py  llm_config.py  mcp_use_test.py  mcp_use_tool_calling_test.py  react.py
agent/client/utils/: llm.py  templates.py
agent/utils/: template.py
ai4netops/: config.py  proj_config.py
ai4netops/generator/fault/: injector_base.py  injector_bmv2.py  injector_mininet.py
ai4netops/generator/workload/: workload_mininet.py
ai4netops/net_env/mininet/: mininet_env.py
ai4netops/orchestrator/: README.md  orchestrator.py
ai4netops/orchestrator/problems/: prob_pool.py
ai4netops/orchestrator/tasks/: base.py  detection.py
ai4netops/service/: bmv2_thrift_api.py  mininet_api.py
ai4netops/tools/: bmv2_thrift_api.py
ai4netops/utils/: error_utils.py  mininet_utils.py  session.py
benchmark/: benchmark.csv  generate_benchmark.py  run_benchmark.py  test.py
config/: __init__.py  config.yaml.example
examples/: gemini_test.py  langgraph_example.py  mcp_use_example.py  ollama_example.py  ollama_langchain_example.py  readme.md  simple_packet_loss.py
llm4netlab/generator/fault/: injector_base.py  injector_kathara.py
llm4netlab/generator/workload/: workload_kathara.py
llm4netlab/net_env/: base.py
llm4netlab/net_env/utils/: sswitch_thrift_API.py
llm4netlab/orchestrator/: orchestrator.py
llm4netlab/orchestrator/actions/: base.py  detection.py  discovery.py
llm4netlab/orchestrator/problems/: prob_pool.py  problem_base.py  readme.md
llm4netlab/orchestrator/tasks/: base.py  detection.py  discovery.py  localization.py
llm4netlab/service/: kathara_api.py  mcp_servers.py
llm4netlab/service/kathara/: __init__.py  base.py  base_api.py  bmv2_api.py  frr_api.py  intf_api.py  nftable_api.py  tc_api.py  telemetry_api.py
llm4netlab/service/mcp_server/: common_tools_mcp_server.py  generic_tools_mcp_server.py  kathara_base_mcp_server.py  (+4 more)
llm4netlab/utils/: actions.py  loggers.py  parser.py  session.py  submission.py
notebooks/: README.md  data_process.ipynb
runtime/: current_session.json
scripts/: step1_net_env_start.py  step2_failure_inject.py  step3_agent_run.py  step4_eval.py  step4_result_eval.py
src/agent/: base.py  graph_scemas.py  react_agent.py
src/llm4netlab/: config.py
src/scripts/: step1_net_env_start.py  step2_failure_inject.py  step3_agent_run.py  step4_result_eval.py
test/: eval_test.py  test.py
(+333 files in other folders)
